<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade_tracker"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint="@string/name"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="20dp"
        android:background="@drawable/edittextbackground"
        tools:ignore="SpUsage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clas"
        android:hint="@string/class_"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="20dp"
        android:background="@drawable/edittextbackground"
        tools:ignore="SpUsage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ids"
        android:hint="@string/id"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:background="@drawable/edittextbackground"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass"
        android:hint="@string/password"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="20dp"
        android:background="@drawable/edittextbackground"
        tools:ignore="SpUsage"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cpass"
        android:hint="@string/confirm_password"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textSize="20dp"
        android:background="@drawable/edittextbackground"
        tools:ignore="SpUsage"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_border"
        android:text="@string/create_account"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_border"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        />

</LinearLayout>